fix: hide overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,7 @@ body {
   color: var(--primary-text-color);
   font-size: calc(var(--pixel-size) * 2.25);
   line-height: calc(var(--pixel-size) * 3.5);
+  overflow: hidden;
 }
 
 a {
